--- a/src/app/features/Jobs/job-view/job-view.html
+++ b/src/app/features/Jobs/job-view/job-view.html
@@ -40,8 +40,7 @@
 
 
     <div class="my-3">
-        Join our dynamic team to build cutting-edge web applications using React, TypeScript, and modern frontend technologies. We're looking for a...
-        <!-- {{job.description}} -->
+        {{job.description | textSlice:120}}
     </div>
 
     <div class="row my-3">
