--- a/src/app/features/profiles/employer/employer-profile/employer-profile.html
+++ b/src/app/features/profiles/employer/employer-profile/employer-profile.html
@@ -2,19 +2,15 @@
     <!-- Profile Section -->
     <section class="profile-section">
 
-        <div class="image">
-            <img [src]="imagePath" alt="image">
-        </div>
-
         <hr class="m-0">
 
         <div class="info row">
 
-            <div class="logo col-1">
-                <img [src]="logoPath" alt="logo">
+            <div class="image col-lg-3 col-md-3 col-sm-12 me-3">
+                <img src="" alt="image">
             </div>
 
-            <div class="col-8">
+            <div class="col-lg-5 col-md-6 col-sm-12">
                 <div class="emp-name">
                     <h2 style="font-weight: 700;">TechStart Solutions</h2>
                 </div>
@@ -39,7 +35,7 @@
                 </div>
 
             </div>
-            
+
             <div class="col-lg-3 d-flex justify-content-end">
                 <button class="post-new-job-btn" routerLink="/addJob"><i class="bi bi-plus me-3"></i> Post New Job </button>
             </div>
