verify email component, login api logic

--- a/src/app/auth/login/login.html
+++ b/src/app/auth/login/login.html
@@ -37,6 +37,9 @@
       </mat-error>
     </mat-form-field>
 
+    <mat-checkbox formControlName="rememberMe">Remember Me</mat-checkbox>
+
+
     <button class="fs-4" mat-raised-button color="primary" type="submit">
       Login
     </button>
