--- a/src/app/features/profiles/employer/employer-profile/employer-profile.html
+++ b/src/app/features/profiles/employer/employer-profile/employer-profile.html
@@ -1,8 +1,7 @@
+<div class="body">
 <div class="emp-profile">
     <!-- Profile Section -->
     <section class="profile-section">
-
-        <hr class="m-0">
 
         <div class="info row">
 
@@ -36,8 +35,9 @@
 
             </div>
 
-            <div class="col-lg-3 d-flex justify-content-end">
-                <button class="post-new-job-btn" routerLink="/addJob"><i class="bi bi-plus me-3"></i> Post New Job </button>
+            <div class="col-lg-3 d-flex flex-column align-items-end">
+                <button class="post-new-job-btn mb-2" routerLink="/addJob"><i class="bi bi-plus me-3"></i> Post New Job </button>
+                <button class="edit-profile-btn" routerLink="/"><i class="bi bi-gear me-3"></i> Edit Profile </button>
             </div>
 
         </div>
@@ -152,4 +152,5 @@
             </div>
         </div>
      </div>
+</div>
 </div>
