--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -14,8 +14,8 @@
 
       </ul>
       <form class="d-flex">
-        <button (click)="goToLogin()" class="LogInBtn" type="submit">Log In</button>
-        <button (click)="goToRegister()" class="SignUpBtn" type="submit">Sign Up</button>
+        <button routerLink="/login" class="LogInBtn" type="submit">Log In</button>
+        <button routerLink="/register" class="SignUpBtn" type="submit">Sign Up</button>
       </form>
     </div>
   </div>
