Add ForgetPassword & ResetPassword

--- a/src/app/auth/login/login.html
+++ b/src/app/auth/login/login.html
@@ -44,14 +44,17 @@
       Login
     </button>
 
-    <p class="text-center fs-5">
+    <p class="text-center fs-5 my-1">
       Don't have an account?
-      <a
-        routerLink="/register"
-        class="title"
-        style="cursor: pointer; text-decoration: underline"
-      >
+      <a routerLink="/register" class="title" style="cursor: pointer; text-decoration: underline">
         Register
+      </a>
+    </p>
+
+    <p class="text-center fs-5 my-1">
+      Forgot your password?
+      <a routerLink="/forget-password" class="title" style="cursor: pointer; text-decoration: underline">
+        Reset it
       </a>
     </p>
   </form>
