--- a/src/app/shared/components/navbar/navbar.css
+++ b/src/app/shared/components/navbar/navbar.css
@@ -4,10 +4,10 @@
     margin-top: 0px;
     position: fixed;
     width: 100%;
+    z-index: 1000;
 }
 
 .navbar-brand{
-   /* color: var(--basic-color); */
    color: rgb(31, 68, 143); 
    font-weight:700;
    font-family:Arial, Helvetica, sans-serif;
@@ -22,7 +22,6 @@
     border-radius: 30%;
     margin-right: 10px;
 }
-
 
 .LogInBtn{
     padding: 5px 15px;
